--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,20 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-settings = "0.6.0"
+toml="0.7.6"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 utoipa = { version = "4", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
 chrono = { version = "0.4", features = ["serde"] }
-sqlx = { version = "0.7", features = [ "runtime-tokio" , "sqlite", "chrono"] }
+sqlx = { version = "0.7", features = [ "runtime-tokio" , "sqlite", "chrono", "postgres","macros", "uuid"] }
 thiserror = "1.0.47"
 validator = "0.16.1"
 validator_derive = "0.16.0"
 derive_more = "0.99.0"
-uuid = "1.3.1"
+uuid = { version = "1.3.1", features = ["v7"]}
 env_logger = "0.10.0"
+rdkafka = { version = "0.36.2", features = ["cmake-build"] }
+futures = "0.3"
+
