--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ uuid = { version = "1.3.1", features = ["v7"]}
 env_logger = "0.10.0"
 rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 futures = "0.3"
+async-trait = "0.1.77"
 
