--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ env_logger = "0.10.0"
 rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 futures = "0.3"
 async-trait = "0.1.77"
+log = { version = "0.4.20", features = [] }
 
