--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,5 @@ rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 futures = "0.3"
 async-trait = "0.1.77"
 log = { version = "0.4.20", features = [] }
+serde_with = "3.6.1"
 
