--- a/res/server.toml
+++ b/res/server.toml
@@ -1,6 +1,7 @@
 [kafka]
 broker = "localhost:29092"
 topic = "greeting"
+consumer_group = "greeting_consumers"
 message_timeout_ms = 5000
 enable_idempotence = true
 processing_guarantee = "exactly_once"
