--- a/res/server.toml
+++ b/res/server.toml
@@ -1,10 +1,11 @@
-[kafka]
+[kafka_consumer]
 broker = "localhost:29092"
 topic = "greeting"
 consumer_group = "greeting_consumers"
 message_timeout_ms = 5000
 enable_idempotence = true
 processing_guarantee = "exactly_once"
+number_of_consumers = 10
 [postgres]
 database_url = "postgres://greeting_rust:greeting_rust@localhost:5432/greeting_rust"
 user = "greeting_rust"
