--- a/kubernetes/kafka.yaml
+++ b/kubernetes/kafka.yaml
@@ -2,18 +2,21 @@ apiVersion: v1
 kind: Service
 metadata:
     labels:
-        app: kafka-service
+        app: kafka1
     name: kafka-service
 spec:
     type: NodePort
     ports:
-        - name: kafka-port
+        - name: kafka-port1
           port: 9092
           protocol: TCP
           targetPort: 9092
-          nodePort: 30126
+        - name: kafka-port2
+          port: 29092
+          protocol: TCP
+          targetPort: 29092
     selector:
-        app: kafka
+        app: kafka1
 #    clusterIP: None
 #    type: ClusterIP
 ---
@@ -21,35 +24,54 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
     labels:
-        app: kafka
+        app: kafka1
     name: kafka-deployment
 spec:
     replicas: 1
     selector:
         matchLabels:
-            app: kafka
+            app: kafka1
     template:
         metadata:
             labels:
-                app: kafka
+                app: kafka1
         spec:
             containers:
                 - env:
-                      - name: KAFKA_BROKER_ID
+                      - name: KAFKA_PROCESS_ROLES
+                        value: "controller,broker"
+                      - name: KAFKA_NODE_ID
                         value: "1"
-                      - name: KAFKA_ZOOKEEPER_CONNECT
-                        value: zookeeper-service:2181
+                      - name: KAFKA_CONTROLLER_LISTENER_NAMES
+                        value: "CONTROLLER"
                       - name: KAFKA_LISTENERS
-                        value: LISTENER_INTERNAL://localhost:9092,LISTENER_EXTERNAL://localhost:30126
+                        value: "CONTROLLER://localhost:29092,PLAINTEXT://localhost:9092"
+                      - name: KAFKA_CONTROLLER_QUORUM_VOTERS
+                        value: "1@localhost:29092"
+                      - name: CLUSTER_ID
+                        value: "ODhCODhFMjEyNDZCNEI0ME"
                       - name: KAFKA_ADVERTISED_LISTENERS
-                        value: LISTENER_INTERNAL://localhost:9092,LISTENER_EXTERNAL://localhost:30126
-                      - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-                        value: LISTENER_INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT
-                      - name: KAFKA_INTER_BROKER_LISTENER_NAME
-                        value: LISTENER_INTERNAL
+                        value: "PLAINTEXT://localhost:9092"
+#                      - name: KAFKA_INTER_BROKER_LISTENER_NAME
+#                        value : "BROKER"
+#                      - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+#                        value: "CONTROLLER:PLAINTEXT"
+#                      - name: KAFKA_BROKER_ID
+#                        value: "1"
+#                      - name: KAFKA_ZOOKEEPER_CONNECT
+#                        value: zookeeper-service:2181
+#                      - name: KAFKA_LISTENERS
+#                        value: LISTENER_INTERNAL://localhost:9092,LISTENER_EXTERNAL://localhost:29092
+#                      - name: KAFKA_ADVERTISED_LISTENERS
+#                        value: LISTENER_INTERNAL://localhost:9092,LISTENER_EXTERNAL://localhost:29092
+#                      - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+#                        value: LISTENER_INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT
+#                      - name: KAFKA_INTER_BROKER_LISTENER_NAME
+#                        value: LISTENER_INTERNAL
                   image: confluentinc/cp-kafka:latest
                   imagePullPolicy: IfNotPresent
                   name: kafka-broker-1
                   ports:
-                      - containerPort: 9092
                       - containerPort: 29092
+                      - containerPort: 9092
+#                      - containerPort: 30126
