--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -13,7 +13,7 @@ spec:
         spec:
             containers:
                 -   name: greeting-rust
-                    image: greetings_rust-server:latest
+                    image: arnecdn/greeting-rust:latest
                     ports:
                         -   containerPort: 8080
                     env:
