--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,7 +12,9 @@ name: Publish Docker Greeting Rust image
 on:
   release:
     types: [published]
-
+  push:
+    branches: [ "main" ]
+    
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
