--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -17,6 +17,8 @@ spec:
                     ports:
                         -   containerPort: 8080
                     env:
+                        - name: DATABASE_URL
+                          value: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres-greeting:5432/${POSTGRES_DB}"
                         -   name: POSTGRES_DB
                             valueFrom:
                                 configMapKeyRef:
