Enabling deployment from local built docker image

--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -14,6 +14,8 @@ spec:
             containers:
                 -   name: greeting-rust
                     image: arnecdn/greeting-rust:latest
+                    imagePullPolicy: Always
+
                     ports:
                         -   containerPort: 8080
                     env:
