Fixing docker to minikube deployment

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-DATABASE_URL=postgres://greeting_rust:greeting_rust@localhost:5432/greeting_rust
+POSTGRES_USER=greeting_rust
+POSTGRES_PASSWORD=greeting_rust
+POSTGRES_DATABASE=greeting_rust
+POSTGRES_HOST=localhost
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DATABASE}
+
 SQLX_OFFLINE=true
