--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -13,7 +13,7 @@ spec:
         spec:
             containers:
                 -   name: greeting-rust
-                    image: arnecdn/greeting-rust:latest
+                    image: arnecdn/greeting-rust:0.4
                     imagePullPolicy: Always
 
                     ports:
