Adding hierarchical configuration override from environment

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-POSTGRES_USER=greeting_rust
-POSTGRES_PASSWORD=greeting_rust
-POSTGRES_DATABASE=greeting_rust
-POSTGRES_HOST=localhost
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DATABASE}
+APP_DATABASE_PASSWORD="greeting_rust"
+APP_DATABASE_USER="greeting_rust"
+APP_DATABASE_DATABASE="greeting_rust"
+APP_DATABASE_HOST="localhost:5432"
+APP_DATABASE_URL="postgres://${APP_DATABASE_USER}:${APP_DATABASE_PASSWORD}@${APP_DATABASE_HOST}/${APP_DATABASE}"
 
 SQLX_OFFLINE=true
