--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,6 @@ futures = "0.3"
 async-trait = "0.1.77"
 log = { version = "0.4.20", features = [] }
 serde_with = "3.6.1"
+config = "0.14.0"
+dotenv = "0.15.0"
 
