--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ APP_DATABASE_PASSWORD="greeting_rust"
 APP_DATABASE_USER="greeting_rust"
 APP_DATABASE_DATABASE="greeting_rust"
 APP_DATABASE_HOST="localhost:5432"
-APP_DATABASE_URL="postgres://${APP_DATABASE_USER}:${APP_DATABASE_PASSWORD}@${APP_DATABASE_HOST}/${APP_DATABASE}"
+APP_DATABASE_URL="postgres://${APP_DATABASE_USER}:${APP_DATABASE_PASSWORD}@${APP_DATABASE_HOST}/${APP_DATABASE_DATABASE}"
 
 SQLX_OFFLINE=true
