--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ APP_DATABASE_USER="greeting_rust"
 APP_DATABASE_DATABASE="greeting_rust"
 APP_DATABASE_HOST="localhost:5432"
 APP_DATABASE_URL="postgres://${APP_DATABASE_USER}:${APP_DATABASE_PASSWORD}@${APP_DATABASE_HOST}/${APP_DATABASE_DATABASE}"
-
+APP_KAFKA_BROKER="localhost:20000"
+APP_KAFKA_CONSUMER_GROUP="greeting_consumers"
 SQLX_OFFLINE=true
