--- a/res/server.toml
+++ b/res/server.toml
@@ -1,7 +1,7 @@
-[kafka_consumer]
-broker = "localhost:29092"
+[kafka]
+broker = "test:29092"
 topic = "greetings.public.greeting_logg"
-consumer_group = "greeting_consumers"
+#consumer_group = "greeting_consumers"
 message_timeout_ms = 5000
 enable_idempotence = true
 processing_guarantee = "exactly_once"
