Want CDC enabled replication of log to kafka

--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -50,6 +50,10 @@ spec:
                           value: "exactly_once"
                         - name: APP_KAFKA_NUMBER_OF_CONSUMERS
                           value: "1"
+                    command:
+                              - "postgres"
+                              - "-c"
+                              - "wal_level=logical"
 
 
 ---
