--- a/kubernetes/postgres-greeting.yaml
+++ b/kubernetes/postgres-greeting.yaml
@@ -13,7 +13,7 @@ spec:
         spec:
             containers:
                 -   name: postgres-greeting
-                    image: postgres:latest
+                    image: postgres:16
                     ports:
                         -   containerPort: 5432
                     env:
