Refactoring formatting of environment

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-APP_DATABASE_PASSWORD="greeting_rust"
-APP_DATABASE_USER="greeting_rust"
-APP_DATABASE_DATABASE="greeting_rust"
-APP_DATABASE_HOST="localhost:5432"
-APP_DATABASE_URL="postgres://${APP_DATABASE_USER}:${APP_DATABASE_PASSWORD}@${APP_DATABASE_HOST}/${APP_DATABASE_DATABASE}"
-APP_KAFKA_BROKER="localhost:20000"
-APP_KAFKA_CONSUMER_GROUP="greeting_consumers"
+APP__DATABASE__PASSWORD="greeting_rust"
+APP__DATABASE__USER="greeting_rust"
+APP__DATABASE__DATABASE="greeting_rust"
+APP__DATABASE__HOST="localhost:5432"
+APP__DATABASE__URL="postgres://${APP__DATABASE__USER}:${APP__DATABASE__PASSWORD}@${APP__DATABASE__HOST}/${APP__DATABASE__DATABASE}"
+APP__KAFKA__CONSUMER_GROUP="greeting_consumersss"
+APP__KAFKA__BROKER="localhost:20000"
+APP__KAFKA__TOPIC="greetings.public.greeting_loggss"
+APP__KAFKA__MESSAGE_TIMEOUT_MS="2"
 SQLX_OFFLINE=true
