--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -13,47 +13,47 @@ spec:
         spec:
             containers:
                 -   name: greeting-rust
-                    image: arnecdn/greeting-rust:0.12
+                    image: arnecdn/greeting-rust:0.15
                     imagePullPolicy: IfNotPresent
 
                     ports:
                         -   containerPort: 8080
                     env:
-                        -   name: APP_DATABASE_DATABASE
+                        -   name: APP__DATABASE__DATABASE
                             valueFrom:
                                 configMapKeyRef:
                                     key: POSTGRES_DB
                                     name: postgres-greeting-config
-                        -   name: APP_DATABASE_USER
+                        -   name: APP__DATABASE__USER
                             valueFrom:
                                 configMapKeyRef:
                                     key: POSTGRES_USER
                                     name: postgres-greeting-config
-                        -   name: APP_DATABASE_PASSWORD
+                        -   name: APP__DATABASE_PASSWORD
                             valueFrom:
                                 secretKeyRef:
                                     key: POSTGRES_PASSWORD
                                     name: postgres-greeting-secret
-                        - name: APP_DATABASE_URL
-                          value: "postgres://$(APP_DATABASE_USER):$(APP_DATABASE_PASSWORD)@postgres-greeting:5432/$(APP_DATABASE_DATABASE)"
-                        - name: APP_KAFKA_BROKER
-                          value: "kafka-service:29092"
-                        - name: APP_KAFKA_TOPIC
+                        - name: APP__DATABASE__URL
+                          value: "postgres://$(APP__DATABASE__USER):$(APP__DATABASE__PASSWORD)@postgres-greeting:5432/$(AP_P_DATABASE__DATABASE)"
+                        - name: APP__KAFKA__BROKER
+                          value: "kafka-service:9092"
+                        - name: APP__KAFKA__TOPIC
                           value: "greetings.public.greeting_logg"
-                        - name: APP_KAFKA_CONSUMER_GROUP
+                        - name: APP__KAFKA__CONSUMER_GROUP
                           value: "greeting_consumers"
-                        - name: APP_KAFKA_MESSAGE_TIMEOUT_MS
+                        - name: APP__KAFKA__MESSAGE_TIMEOUT_MS
                           value: "5000"
-                        - name: APP_KAFKA_ENABLE_IDEMPOTENCE
+                        - name: APP__KAFKA__ENABLE_IDEMPOTENCE
                           value: "true"
-                        - name: APP_KAFKA_PROCESSING_GUARANTEE
+                        - name: APP__KAFKA__PROCESSING_GUARANTEE
                           value: "exactly_once"
-                        - name: APP_KAFKA_NUMBER_OF_CONSUMERS
+                        - name: APP__KAFKA__NUMBER_OF_CONSUMERS
                           value: "1"
-                    command:
-                              - "postgres"
-                              - "-c"
-                              - "wal_level=logical"
+#                    command:
+#                              - "postgres"
+#                              - "-c"
+#                              - "wal_level=logical"
 
 
 ---
