--- a/res/server.toml
+++ b/res/server.toml
@@ -1,10 +1,10 @@
 [kafka]
 broker = "test:29092"
 topic = "greetings.public.greeting_logg"
-#consumer_group = "greeting_consumers"
+consumer_group = "greeting_consumers"
 message_timeout_ms = 5000
 enable_idempotence = true
 processing_guarantee = "exactly_once"
 number_of_consumers = 10
 [database]
-url = "postgres://greeting_rust:greeting_rust@localhost:5432/greeting_rust"
+url = "postgres://greeting_rust:greeting_rust@test:5432/greeting_rust"
