Fixing kubernetes deploy

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP__DATABASE__DATABASE="greeting_rust"
 APP__DATABASE__HOST="localhost:5432"
 APP__DATABASE__URL="postgres://${APP__DATABASE__USER}:${APP__DATABASE__PASSWORD}@${APP__DATABASE__HOST}/${APP__DATABASE__DATABASE}"
 APP__KAFKA__CONSUMER_GROUP="greeting_consumersss"
-APP__KAFKA__BROKER="localhost:20000"
+APP__KAFKA__BROKER="localhost:20000"doco
 APP__KAFKA__TOPIC="greetings.public.greeting_loggss"
 APP__KAFKA__MESSAGE_TIMEOUT_MS="2"
 SQLX_OFFLINE=true
