--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -29,13 +29,13 @@ spec:
                                 configMapKeyRef:
                                     key: POSTGRES_USER
                                     name: postgres-greeting-config
-                        -   name: APP__DATABASE_PASSWORD
+                        -   name: APP__DATABASE__PASSWORD
                             valueFrom:
                                 secretKeyRef:
                                     key: POSTGRES_PASSWORD
                                     name: postgres-greeting-secret
                         - name: APP__DATABASE__URL
-                          value: "postgres://$(APP__DATABASE__USER):$(APP__DATABASE__PASSWORD)@postgres-greeting:5432/$(AP_P_DATABASE__DATABASE)"
+                          value: "postgres://$(APP__DATABASE__USER):$(APP__DATABASE__PASSWORD)@postgres-greeting:5432/$(APP__DATABASE__DATABASE)"
                         - name: APP__KAFKA__BROKER
                           value: "kafka-service:9092"
                         - name: APP__KAFKA__TOPIC
