--- a/kubernetes/kafka-connect.yaml
+++ b/kubernetes/kafka-connect.yaml
@@ -38,7 +38,7 @@ spec:
                  name: kafka-connect
                  env:
                       - name: CONNECT_BOOTSTRAP_SERVERS
-                        value: "kafka-service:9092"
+                        value: "kafka-0.kafka-service.default.svc.cluster.local:9092"
                       - name: CONNECT_GROUP_ID
                         value: "2"
                       - name: CONNECT_CONFIG_STORAGE_TOPIC
