--- a/kubernetes/kafka.yaml
+++ b/kubernetes/kafka.yaml
@@ -10,6 +10,10 @@ spec:
           port: 9092
           protocol: TCP
           targetPort: 9092
+        - name: kafka-port2
+          port: 9093
+          protocol: TCP
+          targetPort: 9093
     selector:
         app: kafka-app
 ---
@@ -38,6 +42,7 @@ spec:
                  ports:
                      - containerPort: 29092
                      - containerPort: 9092
+                     - containerPort: 9093
 
                  env:
                       - name: ORDINAL_NUMBER
@@ -54,11 +59,11 @@ spec:
                             apiVersion: v1
                             fieldPath: metadata.name
                       - name: KAFKA_LISTENERS
-                        value: "CONTROLLER://:29092,PLAINTEXT://:9092"
+                        value: "CONTROLLER://:29092,PLAINTEXT://:9092, PLAINTEXT_HOST://:9093"
                       - name: KAFKA_CONTROLLER_QUORUM_VOTERS
                         value: "0@kafka-0.kafka-service.default.svc.cluster.local:29092,1@kafka-1.kafka-service.default.svc.cluster.local:29092,2@kafka-2.kafka-service.default.svc.cluster.local:29092"
                       - name: KAFKA_ADVERTISED_LISTENERS
-                        value: "PLAINTEXT://kafka-service:9092"
+                        value: "PLAINTEXT://localhost:9092, PLAINTEXT_HOST://kafka-service:9093"
 
 
 #                  command:
