--- a/kubernetes/kafka.yaml
+++ b/kubernetes/kafka.yaml
@@ -26,7 +26,7 @@ metadata:
 
 spec:
     serviceName: kafka-service
-    replicas: 3
+    replicas: 1
     selector:
         matchLabels:
             app: kafka-app
@@ -61,7 +61,8 @@ spec:
                       - name: KAFKA_LISTENERS
                         value: "CONTROLLER://:29092,PLAINTEXT://:9092, PLAINTEXT_HOST://:9093"
                       - name: KAFKA_CONTROLLER_QUORUM_VOTERS
-                        value: "0@kafka-0.kafka-service.default.svc.cluster.local:29092,1@kafka-1.kafka-service.default.svc.cluster.local:29092,2@kafka-2.kafka-service.default.svc.cluster.local:29092"
+#                        value: "0@kafka-0.kafka-service.default.svc.cluster.local:29092,1@kafka-1.kafka-service.default.svc.cluster.local:29092,2@kafka-2.kafka-service.default.svc.cluster.local:29092"
+                        value: "0@kafka-0.kafka-service.default.svc.cluster.local:29092"
                       - name: KAFKA_ADVERTISED_LISTENERS
                         value: "PLAINTEXT://localhost:9092, PLAINTEXT_HOST://kafka-service:9093"
 
