Refactoring according to warnings from cargo build

--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-APP__DATABASE__PASSWORD="greeting_rust"
-APP__DATABASE__USER="greeting_rust"
-APP__DATABASE__DATABASE="greeting_rust"
-APP__DATABASE__HOST="localhost:5432"
-APP__DATABASE__URL="postgres://${APP__DATABASE__USER}:${APP__DATABASE__PASSWORD}@${APP__DATABASE__HOST}/${APP__DATABASE__DATABASE}"
 APP__KAFKA__BROKER="localhost:9092"
 APP__KAFKA__TOPIC="greetings"
-APP__KAFKA__MESSAGE_TIMEOUT_MS="200"
-SQLX_OFFLINE=true
+APP__KAFKA__MESSAGE_TIMEOUT_MS="5000"
+APP__KAFKA__ENABLE_IDEMPOTENCE="true"
+
