--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,8 @@ config = "0.14.0"
 dotenv = "0.15.0"
 
 opentelemetry = "0.24.0"
-opentelemetry_sdk = "0.24.1"
+opentelemetry_sdk = { version="0.24.1", features = ["rt-tokio", "logs"]}
 opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
 opentelemetry-appender-log = "0.5.0"
 opentelemetry-semantic-conventions="0.16.0"
-
 
