--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,11 @@ serde_with = "3.6.1"
 config = "0.14.0"
 dotenv = "0.15.0"
 
-opentelemetry = "0.24.0"
-opentelemetry_sdk = { version="0.24.1", features = ["rt-tokio", "logs"]}
-opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
-opentelemetry-appender-log = "0.5.0"
-opentelemetry-semantic-conventions="0.16.0"
-
+opentelemetry = {features = ["metrics", "logs"] }
+opentelemetry_sdk = {  features = ["rt-tokio", "logs"] }
+opentelemetry-otlp = {  features = ["tonic", "metrics", "logs"] }
+opentelemetry-semantic-conventions = "0.16.0"
+tokio = { version = "1.0", features = ["full"] }
+opentelemetry-appender-tracing = {  default-features = false}
+tracing-subscriber = "0.3.18"
+once_cell = "1.19.0"
