--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,7 @@ opentelemetry-semantic-conventions = "0.16.0"
 tokio = { version = "1.0", features = ["full"] }
 opentelemetry-appender-tracing = {  default-features = false}
 tracing-subscriber = "0.3.18"
+tracing = { version = "0.1.40", features = ["std"]}
+tracing-core ="0.1.32"
+
 once_cell = "1.19.0"
