--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,12 +29,12 @@ serde_with = "3.6.1"
 config = "0.14.0"
 dotenv = "0.15.0"
 
-opentelemetry = {features = ["metrics", "logs"] }
-opentelemetry_sdk = {  features = ["rt-tokio", "logs"] }
-opentelemetry-otlp = {  features = ["tonic", "metrics", "logs"] }
+opentelemetry = {version = "0.24.0",features = ["metrics", "logs"] }
+opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "logs"] }
+opentelemetry-otlp = { version = "0.17.0", features = ["tonic", "metrics", "logs"] }
 opentelemetry-semantic-conventions = "0.16.0"
 tokio = { version = "1.0", features = ["full"] }
-opentelemetry-appender-tracing = {  default-features = false}
+opentelemetry-appender-tracing = {  version = "0.5.0",default-features = false}
 tracing-subscriber = "0.3.18"
 tracing = { version = "0.1.40", features = ["std"]}
 tracing-core ="0.1.32"
