--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,10 @@ opentelemetry-semantic-conventions = "0.16.0"
 tokio = { version = "1.0", features = ["full"] }
 opentelemetry-appender-tracing = {  version = "0.5.0",default-features = false}
 tracing-subscriber = "0.3.18"
-tracing = { version = "0.1.40", features = ["std"]}
+tracing = { version = "0.1.40", features = ["std", "attributes"]}
 tracing-core ="0.1.32"
 
 once_cell = "1.19.0"
+tracing-opentelemetry = "0.25.0"
+#actix-web-opentelemetry = { version = "0.18.0", features = ["sync-middleware"] }
 
