--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ opentelemetry-otlp = { version = "0.17.0", features = ["tonic", "metrics", "logs
 opentelemetry-semantic-conventions = "0.16.0"
 tokio = { version = "1.0", features = ["full"] }
 opentelemetry-appender-tracing = {  version = "0.5.0",default-features = false}
-tracing-subscriber = "0.3.18"
+tracing-subscriber= {version= "0.3.18",features = ["env-filter","registry", "std"]}
 tracing = { version = "0.1.40", features = ["std", "attributes"]}
 tracing-core ="0.1.32"
 
