--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,5 +41,6 @@ tracing-core ="0.1.32"
 
 once_cell = "1.19.0"
 tracing-opentelemetry = "0.25.0"
+metrics = "0.23.0"
 #actix-web-opentelemetry = { version = "0.18.0", features = ["sync-middleware"] }
 
