--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
-actix-settings = "0.7.1"
-toml= "0.8.12"
+actix-web = "4.9.0"
+actix-settings = "0.8.0"
+toml= "0.8.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 utoipa = { version = "4", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
 chrono = { version = "0.4", features = ["serde"] }
-thiserror = "1.0.47"
+thiserror = "1.0.64"
 validator = "0.18.1"
 validator_derive = "0.18.1"
-derive_more = "0.99.18"
+derive_more = { version = "1.0.0", features = ["full"]}
 uuid = { version = "1.10.0", features = ["v7"]}
 #env_logger = "0.10.0"
 rdkafka = { version = "0.36.2", features = ["cmake-build"] }
@@ -29,18 +29,18 @@ serde_with = "3.6.1"
 config = "0.14.0"
 dotenv = "0.15.0"
 
-opentelemetry = {version = "0.24.0",features = ["metrics", "logs"] }
-opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "logs"] }
-opentelemetry-otlp = { version = "0.17.0", features = ["tonic", "metrics", "logs"] }
-opentelemetry-semantic-conventions = "0.16.0"
+opentelemetry = {version = "0.25.0",features = ["metrics", "logs"] }
+opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "logs"] }
+opentelemetry-otlp = { version = "0.25.0", features = ["tonic", "metrics", "logs"] }
+opentelemetry-semantic-conventions = "0.25.0"
 tokio = { version = "1.0", features = ["full"] }
-opentelemetry-appender-tracing = {  version = "0.5.0",default-features = false}
+opentelemetry-appender-tracing = {  version = "0.25.0",default-features = false}
 tracing-subscriber= {version= "0.3.18",features = ["env-filter","registry", "std"]}
 tracing = { version = "0.1.40", features = ["std", "attributes"]}
 tracing-core ="0.1.32"
 
 once_cell = "1.19.0"
-tracing-opentelemetry = "0.25.0"
+tracing-opentelemetry = "0.26.0"
 metrics = "0.23.0"
 #actix-web-opentelemetry = { version = "0.18.0", features = ["sync-middleware"] }
 
