--- a/kubernetes/greeting-rust.yaml
+++ b/kubernetes/greeting-rust.yaml
@@ -20,6 +20,7 @@ spec:
                             memory: "8Mi"
                             cpu: "1m"
                         limits:
+                            cpu: "2m"
                             memory: "16Mi"
                     ports:
                         -   containerPort: 8080
