--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ APP__KAFKA__TOPIC="greetings"
 APP__KAFKA__MESSAGE_TIMEOUT_MS="5000"
 APP__KAFKA__ENABLE_IDEMPOTENCE="true"
 APP__OTEL_COLLECTOR__OLTP_ENDPOINT="http://localhost:4317"
+APP__KUBE__MY_POD_NAME="test"
 
